--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 </div>
             </div>
         </section>
+        <!-- what is do Experience section -->
        <section>
                 <h2 class="section-title">A summary of My Resume</h2>
             <div class="resume-container">
@@ -133,8 +134,30 @@
             </div>
        </section>
     </main>
+    <!-- what is do footer section -->
     <footer>
-        
+        <section class="footer">
+            <div class="column">
+                <h2 class="footer-title">Lets Connect</h2>
+                <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="fecebook.com"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="twitter.com"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="instragram.com"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+            <div class="column">
+                <h2 class="footer-title">Let’s Message me</h2>
+                <form action="">
+                    <label for="name">
+                        <input type="text" placeholder="Your Name">
+                    </label>
+                    <label for="Email">
+                        <input type="email" name="" id="" placeholder="Your Email">
+                    </label>
+                    <textarea class="footer-comment-box" name="" id="" cols="20" rows="15" placeholder="Massege"></textarea>
+                </form>
+                <button class="footer-btn">Submit</button>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
