--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Web Site</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/f614c94ef1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header secondary-bg">
@@ -21,8 +22,10 @@
                 <h4 class="banner-greeting">Hi, I  am</h4>
                 <h1 class="banner-title">SAKIL</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="primary-btn">Download CV</button>
-                <button class="primary-btn-1">Contact</button>
+                <div class="btn-container">
+                    <button class="primary-btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="primary-btn-1"><i class="fa-solid fa-phone"></i> Contact</button>
+                </div>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -130,7 +133,7 @@
                 </div>
             </div>
             <div class="btn">
-                <button class="primary-btn">Download CV</button>
+                <button class="primary-btn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
        </section>
     </main>
